add keep_run code

--- a/PycharmProjects/Accenture/CIO/ALICE/Other_utils/config.conf
+++ b/PycharmProjects/Accenture/CIO/ALICE/Other_utils/config.conf
@@ -1,1 +1,24 @@
-[config]basic = None[env_info]host = localhostport = 22username = Nonepassword = Nonesftp_path = Nonehdfs_root_path = /cio/insight/hdfs_sub_path = None[user_defined][A001]SQL_A = select * from production[A002]SQL_B = select * from production
+[config]
+basic = None
+
+[env_info]
+env = prod
+host = localhost
+port = 22
+username = None
+password = None
+sftp_path = None
+hdfs_root_path = /cio/insight/
+hdfs_sub_path = None
+days = 4
+
+[user_defined]
+
+[A001]
+SQL_A = select * from production
+
+[A002]
+SQL_B = select * from production
+
+
+
